welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ')' expected but 'if' found.
if (estSurBiscuit) {biscuits=biscuits+1}
^RunHalf:7: error: ';' expected but integer literal found.
	2 * biscuits = caseOrange + 1;)
        ^RunHalf:7: error: illegal start of statement
	2 * biscuits = caseOrange + 1;)
                                      ^