welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var biscuits:Int = 0
var caseOrange:Int =0
while (if (estSurOrange) {caseOrange=caseOrange+1}
if (estSurBiscuit) {biscuits=biscuits+1}
	2 * biscuits = caseOrange + 1;)
 {
avance()


}
}
